# fastapi_lessons

./: .dev.env  .gitignore  .test.env  Makefile  README.md  alembic.ini  dependencies.py  docker-compose.yml  exceptions.py  main.py  pyproject.toml  settings.py
app/: __init__.py  dependencies.py  main.py  settings.py
app/handlers/: __init__.py  auth.py  tasks.py  users.py
app/infrastructure/cache/: __init__.py  accessor.py
app/infrastructure/database/: __init__.py  database.py
app/models/: __init__.py  task_models.py
app/repository/: __init__.py  task_cache_repository.py  task_repository.py  user_repository.py
app/schemas/: __init__.py
app/service/: __init__.py  auth_service.py  task_service.py  user_service.py
app/settings/: auth_settings.py  exceptions.py  main_settings.py
app/tasks/: __init__.py  handlers.py  models.py  schemas.py  service.py
app/tasks/repository/: __init__.py  cache_repository.py  repository.py
app/users/auth/: __init__.py  exceptions.py  handlers.py  schemas.py  service.py
app/users/auth/token/: schemas.py  service.py
app/users/users_profile/: __init__.py  handlers.py  models.py  repository.py  schemas.py  service.py
cache/: accessor.py
database/: __init__.py  database.py
database/models/: task_models.py
handlers/: __init__.py  auth.py  tasks.py  users.py
migrations/: env.py
migrations/versions/: 04de7b03155b_изменил_модель_задач_привязав_.py  271ebffaa2c3_add_type_to_category.py  64b0e874dda8_добавил_индекс_на_поле_name_таблицы_.py  703272b78c68_init.py  7a2a63f4c9fd_добавил_индекс_на_поле_name_таблицы_.py  a6711c7cdbeb_add_users.py  ebde7791b3f4_first_init.py
models/: __init__.py  task_models.py  user_models.py
repository/: __init__.py  task_cache_repository.py  task_repository.py  user_repository.py
schemas/: Tasks.py  __init__.py  tasks.py  users.py
service/: __init__.py  auth.py  auth_service.py  task_service.py  user.py  user_service.py
temp/: tmp.py
tests/unit/users/auth/token/: conftest.py  test_token_service.py
