[tool.poetry]
name = "pomodoro-analytics"
version = "0.1.0"
description = ""
authors = ["a.kapral26 <a.kapral26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.4" }
pydantic-settings = "^2.6.1"
watchfiles = "^0.24.0"
ruff = "^0.7.3"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
faker = "^33.0.0"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# https://docs.astral.sh/ruff/settings/#tab-size
select = [
    # pycodestyle
    "W",
    # Pyflakes
    "B",
    # flake8-bugbear
    "Q",
    # flake8-quotes
    "N",
    # pep8-naming
    "D",
    # pydocstyle
    "UP",
    # pyupgrade
    "S",
    # pyupgrade
    "T20",
    "RUF",
    # Ruff-specific rules
    "FLY",
    # flynt
    "TRY",
    # tryceratops
    "PD",
    # pandas-vet
    "TCH",
    # flake8-type-checking
    "ANN", #flake8-annotations
]
ignore = ["F", "D107", "S608", "D212", "D205", "D400", "D415", "E722", "F401", "RUF001", "RUF002", "RUF003", "ANN101", "ANN002", "ANN003", "ANN204", "TRY003", "TRY200", "B904", ]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv", ]
per-file-ignores = { }
# Same as Black.
line-length = 120
# Assume Python 3.8
target-version = "py311"
[format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Use tabs instead of 4 space indentation.
indent-style = "tab"
quote-style = "double"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = ["ens_settings"]
[lint]
# Enable D400 on top of the Google convention.
extend-select = ["D400"]
[lint.pydocstyle]
convention = "google"
